changed to https

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://zakatechsoftwares.github.io/budgetapp",
+  "homepage": "https://zakatechsoftwares.github.io/budgetapp",
   "name": "budgetapp",
   "version": "0.1.0",
   "private": true,
